# instance-repo-tmp

./: .copier-answers.yml  .env.example  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: pull_request_template.md  release.yaml
.github/workflows/: check-pr-style.yaml  code-quality.yaml
docs/: index.md
fraud/: data.py
fraud/pipelines/: complete_pipeline.py  run.py  simplified_pipeline.py
infrastructure/: .dockerignore  Dockerfile
pipelines/: complete_pipeline.yaml  simplified_pipeline.yaml
scripts/: install_dependencies.sh
tests/: test_pipelines.py
tests/integration/: test_pipelines_integration.py
